// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiagnosticsPanel theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div
    class="rh-diagnostics-panel"
    id="rh-diagnostics-ID"
  >
    <section
      aria-labelledby="rh-diagnostics-ID-compiler"
      class="rh-diagnostics-panel__section"
    >
      <h3
        class="rh-diagnostics-panel__heading"
        id="rh-diagnostics-ID-compiler"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-wrench rh-icon"
          data-icon="wrench"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
          />
        </svg>
        <span>
          Compiler diagnostics
        </span>
        <span
          class="rh-diagnostics-panel__count"
        >
          1 message
        </span>
      </h3>
      <p
        class="rh-diagnostics-panel__note"
      >
        What the LaTeX engine reported about this build.
      </p>
      <div
        class="rh-diagnostic-list"
        data-source="compiler"
      >
        <div
          class="rh-diagnostic-list__group"
        >
          <h4
            class="rh-diagnostic-list__file"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-code rh-icon"
              data-icon="file-code"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
              />
              <path
                d="M14 2v5a1 1 0 0 0 1 1h5"
              />
              <path
                d="M10 12.5 8 15l2 2.5"
              />
              <path
                d="m14 12.5 2 2.5-2 2.5"
              />
            </svg>
            <span>
              manuscript/main.tex
            </span>
            <span
              class="rh-diagnostic-list__count"
            >
              1
            </span>
          </h4>
          <ul
            aria-label="Compiler diagnostics: manuscript/main.tex"
            class="rh-diagnostic-list__rows"
          >
            <li
              class="rh-diagnostic"
              data-severity="error"
              data-source="compiler"
            >
              <p
                class="rh-diagnostic__found"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-alert rh-icon"
                  data-icon="alert-circle"
                  fill="none"
                  focusable="false"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="8"
                    y2="12"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="16"
                    y2="16"
                  />
                </svg>
                <span
                  class="rh-diagnostic__severity"
                >
                  Error
                </span>
                 — 
                <span
                  class="rh-diagnostic__message"
                >
                  Undefined control sequence.
                </span>
              </p>
              <div
                class="rh-diagnostic__foot"
              >
                <span
                  class="rh-diagnostic__position"
                >
                  line 120
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="rh-diagnostics-ID-audit"
      class="rh-diagnostics-panel__section"
    >
      <h3
        class="rh-diagnostics-panel__heading"
        id="rh-diagnostics-ID-audit"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-microscope rh-icon"
          data-icon="microscope"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18h8"
          />
          <path
            d="M3 22h18"
          />
          <path
            d="M14 22a7 7 0 1 0 0-14h-1"
          />
          <path
            d="M9 14h2"
          />
          <path
            d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"
          />
          <path
            d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"
          />
        </svg>
        <span>
          Scientific audit
        </span>
        <span
          class="rh-diagnostics-panel__count"
        >
          2 findings
        </span>
      </h3>
      <p
        class="rh-diagnostics-panel__note"
      >
        What the manuscript claims, checked against accepted state. Separate from the compiler: a document can compile and still fail this.
      </p>
      <div
        class="rh-audit-finding-list"
        data-source="audit"
      >
        <ul
          aria-label="Scientific audit"
          class="rh-audit-finding-list__rows"
        >
          <li
            class="rh-audit-finding"
            data-kind="citation_mismatch"
            data-severity="error"
            data-source="audit"
          >
            <blockquote
              class="rh-audit-finding__sentence"
            >
              Earlier sweeps report the same ordering on held-out traffic.
            </blockquote>
            <p
              class="rh-audit-finding__found"
            >
              <span
                class="rh-audit-finding__kind"
              >
                Citation mismatch
              </span>
               — 
              <span
                class="rh-audit-finding__message"
              >
                the key "smith2024" is cited but missing from refs.bib
              </span>
            </p>
            <div
              class="rh-audit-finding__foot"
            >
              <span
                class="rh-described-term rh-audit-finding__severity"
              >
                <span
                  aria-describedby="rh-described-term-rd"
                  class="rh-described-term__word"
                  tabindex="0"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--status-contested"
                    data-status="contested"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-triangle-alert rh-icon"
                      data-icon="alert-triangle"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                      />
                      <path
                        d="M12 9v4"
                      />
                      <path
                        d="M12 17h.01"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Must fix
                    </span>
                  </span>
                </span>
                <span
                  class="rh-visually-hidden"
                  id="rh-described-term-rd"
                >
                  Accepted state contradicts the manuscript here. It cannot ship as it stands.
                </span>
              </span>
              <span
                class="rh-audit-finding__position"
              >
                manuscript/main.tex, line 44
              </span>
            </div>
          </li>
          <li
            class="rh-audit-finding"
            data-kind="stale_claim"
            data-severity="warning"
            data-source="audit"
          >
            <blockquote
              class="rh-audit-finding__sentence"
            >
              The gain is concentrated in the two rarest attack families.
            </blockquote>
            <p
              class="rh-audit-finding__found"
            >
              <span
                class="rh-audit-finding__kind"
              >
                Stale claim
              </span>
               — 
              <span
                class="rh-audit-finding__message"
              >
                C0041 moved since this paragraph was written
              </span>
            </p>
            <div
              class="rh-audit-finding__foot"
            >
              <span
                class="rh-described-term rh-audit-finding__severity"
              >
                <span
                  aria-describedby="rh-described-term-re"
                  class="rh-described-term__word"
                  tabindex="0"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--status-candidate"
                    data-status="candidate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-dashed rh-icon"
                      data-icon="circle-dashed"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.1 2.182a10 10 0 0 1 3.8 0"
                      />
                      <path
                        d="M13.9 21.818a10 10 0 0 1-3.8 0"
                      />
                      <path
                        d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
                      />
                      <path
                        d="M2.182 13.9a10 10 0 0 1 0-3.8"
                      />
                      <path
                        d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
                      />
                      <path
                        d="M21.818 10.1a10 10 0 0 1 0 3.8"
                      />
                      <path
                        d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
                      />
                      <path
                        d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Review
                    </span>
                  </span>
                </span>
                <span
                  class="rh-visually-hidden"
                  id="rh-described-term-re"
                >
                  A researcher has to decide about this before the manuscript ships.
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </section>
  </div>
</div>
`;

exports[`DiagnosticsPanel theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div
    class="rh-diagnostics-panel"
    id="rh-diagnostics-ID"
  >
    <section
      aria-labelledby="rh-diagnostics-ID-compiler"
      class="rh-diagnostics-panel__section"
    >
      <h3
        class="rh-diagnostics-panel__heading"
        id="rh-diagnostics-ID-compiler"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-wrench rh-icon"
          data-icon="wrench"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
          />
        </svg>
        <span>
          Compiler diagnostics
        </span>
        <span
          class="rh-diagnostics-panel__count"
        >
          1 message
        </span>
      </h3>
      <p
        class="rh-diagnostics-panel__note"
      >
        What the LaTeX engine reported about this build.
      </p>
      <div
        class="rh-diagnostic-list"
        data-source="compiler"
      >
        <div
          class="rh-diagnostic-list__group"
        >
          <h4
            class="rh-diagnostic-list__file"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-code rh-icon"
              data-icon="file-code"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
              />
              <path
                d="M14 2v5a1 1 0 0 0 1 1h5"
              />
              <path
                d="M10 12.5 8 15l2 2.5"
              />
              <path
                d="m14 12.5 2 2.5-2 2.5"
              />
            </svg>
            <span>
              manuscript/main.tex
            </span>
            <span
              class="rh-diagnostic-list__count"
            >
              1
            </span>
          </h4>
          <ul
            aria-label="Compiler diagnostics: manuscript/main.tex"
            class="rh-diagnostic-list__rows"
          >
            <li
              class="rh-diagnostic"
              data-severity="error"
              data-source="compiler"
            >
              <p
                class="rh-diagnostic__found"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-alert rh-icon"
                  data-icon="alert-circle"
                  fill="none"
                  focusable="false"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="8"
                    y2="12"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="16"
                    y2="16"
                  />
                </svg>
                <span
                  class="rh-diagnostic__severity"
                >
                  Error
                </span>
                 — 
                <span
                  class="rh-diagnostic__message"
                >
                  Undefined control sequence.
                </span>
              </p>
              <div
                class="rh-diagnostic__foot"
              >
                <span
                  class="rh-diagnostic__position"
                >
                  line 120
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="rh-diagnostics-ID-audit"
      class="rh-diagnostics-panel__section"
    >
      <h3
        class="rh-diagnostics-panel__heading"
        id="rh-diagnostics-ID-audit"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-microscope rh-icon"
          data-icon="microscope"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18h8"
          />
          <path
            d="M3 22h18"
          />
          <path
            d="M14 22a7 7 0 1 0 0-14h-1"
          />
          <path
            d="M9 14h2"
          />
          <path
            d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"
          />
          <path
            d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"
          />
        </svg>
        <span>
          Scientific audit
        </span>
        <span
          class="rh-diagnostics-panel__count"
        >
          2 findings
        </span>
      </h3>
      <p
        class="rh-diagnostics-panel__note"
      >
        What the manuscript claims, checked against accepted state. Separate from the compiler: a document can compile and still fail this.
      </p>
      <div
        class="rh-audit-finding-list"
        data-source="audit"
      >
        <ul
          aria-label="Scientific audit"
          class="rh-audit-finding-list__rows"
        >
          <li
            class="rh-audit-finding"
            data-kind="citation_mismatch"
            data-severity="error"
            data-source="audit"
          >
            <blockquote
              class="rh-audit-finding__sentence"
            >
              Earlier sweeps report the same ordering on held-out traffic.
            </blockquote>
            <p
              class="rh-audit-finding__found"
            >
              <span
                class="rh-audit-finding__kind"
              >
                Citation mismatch
              </span>
               — 
              <span
                class="rh-audit-finding__message"
              >
                the key "smith2024" is cited but missing from refs.bib
              </span>
            </p>
            <div
              class="rh-audit-finding__foot"
            >
              <span
                class="rh-described-term rh-audit-finding__severity"
              >
                <span
                  aria-describedby="rh-described-term-rg"
                  class="rh-described-term__word"
                  tabindex="0"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--status-contested"
                    data-status="contested"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-triangle-alert rh-icon"
                      data-icon="alert-triangle"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                      />
                      <path
                        d="M12 9v4"
                      />
                      <path
                        d="M12 17h.01"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Must fix
                    </span>
                  </span>
                </span>
                <span
                  class="rh-visually-hidden"
                  id="rh-described-term-rg"
                >
                  Accepted state contradicts the manuscript here. It cannot ship as it stands.
                </span>
              </span>
              <span
                class="rh-audit-finding__position"
              >
                manuscript/main.tex, line 44
              </span>
            </div>
          </li>
          <li
            class="rh-audit-finding"
            data-kind="stale_claim"
            data-severity="warning"
            data-source="audit"
          >
            <blockquote
              class="rh-audit-finding__sentence"
            >
              The gain is concentrated in the two rarest attack families.
            </blockquote>
            <p
              class="rh-audit-finding__found"
            >
              <span
                class="rh-audit-finding__kind"
              >
                Stale claim
              </span>
               — 
              <span
                class="rh-audit-finding__message"
              >
                C0041 moved since this paragraph was written
              </span>
            </p>
            <div
              class="rh-audit-finding__foot"
            >
              <span
                class="rh-described-term rh-audit-finding__severity"
              >
                <span
                  aria-describedby="rh-described-term-rh"
                  class="rh-described-term__word"
                  tabindex="0"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--status-candidate"
                    data-status="candidate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-dashed rh-icon"
                      data-icon="circle-dashed"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.1 2.182a10 10 0 0 1 3.8 0"
                      />
                      <path
                        d="M13.9 21.818a10 10 0 0 1-3.8 0"
                      />
                      <path
                        d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
                      />
                      <path
                        d="M2.182 13.9a10 10 0 0 1 0-3.8"
                      />
                      <path
                        d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
                      />
                      <path
                        d="M21.818 10.1a10 10 0 0 1 0 3.8"
                      />
                      <path
                        d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
                      />
                      <path
                        d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Review
                    </span>
                  </span>
                </span>
                <span
                  class="rh-visually-hidden"
                  id="rh-described-term-rh"
                >
                  A researcher has to decide about this before the manuscript ships.
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </section>
  </div>
</div>
`;

exports[`DiagnosticsPanel theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div
    class="rh-diagnostics-panel"
    id="rh-diagnostics-ID"
  >
    <section
      aria-labelledby="rh-diagnostics-ID-compiler"
      class="rh-diagnostics-panel__section"
    >
      <h3
        class="rh-diagnostics-panel__heading"
        id="rh-diagnostics-ID-compiler"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-wrench rh-icon"
          data-icon="wrench"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
          />
        </svg>
        <span>
          Compiler diagnostics
        </span>
        <span
          class="rh-diagnostics-panel__count"
        >
          1 message
        </span>
      </h3>
      <p
        class="rh-diagnostics-panel__note"
      >
        What the LaTeX engine reported about this build.
      </p>
      <div
        class="rh-diagnostic-list"
        data-source="compiler"
      >
        <div
          class="rh-diagnostic-list__group"
        >
          <h4
            class="rh-diagnostic-list__file"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-code rh-icon"
              data-icon="file-code"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
              />
              <path
                d="M14 2v5a1 1 0 0 0 1 1h5"
              />
              <path
                d="M10 12.5 8 15l2 2.5"
              />
              <path
                d="m14 12.5 2 2.5-2 2.5"
              />
            </svg>
            <span>
              manuscript/main.tex
            </span>
            <span
              class="rh-diagnostic-list__count"
            >
              1
            </span>
          </h4>
          <ul
            aria-label="Compiler diagnostics: manuscript/main.tex"
            class="rh-diagnostic-list__rows"
          >
            <li
              class="rh-diagnostic"
              data-severity="error"
              data-source="compiler"
            >
              <p
                class="rh-diagnostic__found"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-alert rh-icon"
                  data-icon="alert-circle"
                  fill="none"
                  focusable="false"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="8"
                    y2="12"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="16"
                    y2="16"
                  />
                </svg>
                <span
                  class="rh-diagnostic__severity"
                >
                  Error
                </span>
                 — 
                <span
                  class="rh-diagnostic__message"
                >
                  Undefined control sequence.
                </span>
              </p>
              <div
                class="rh-diagnostic__foot"
              >
                <span
                  class="rh-diagnostic__position"
                >
                  line 120
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="rh-diagnostics-ID-audit"
      class="rh-diagnostics-panel__section"
    >
      <h3
        class="rh-diagnostics-panel__heading"
        id="rh-diagnostics-ID-audit"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-microscope rh-icon"
          data-icon="microscope"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18h8"
          />
          <path
            d="M3 22h18"
          />
          <path
            d="M14 22a7 7 0 1 0 0-14h-1"
          />
          <path
            d="M9 14h2"
          />
          <path
            d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"
          />
          <path
            d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"
          />
        </svg>
        <span>
          Scientific audit
        </span>
        <span
          class="rh-diagnostics-panel__count"
        >
          2 findings
        </span>
      </h3>
      <p
        class="rh-diagnostics-panel__note"
      >
        What the manuscript claims, checked against accepted state. Separate from the compiler: a document can compile and still fail this.
      </p>
      <div
        class="rh-audit-finding-list"
        data-source="audit"
      >
        <ul
          aria-label="Scientific audit"
          class="rh-audit-finding-list__rows"
        >
          <li
            class="rh-audit-finding"
            data-kind="citation_mismatch"
            data-severity="error"
            data-source="audit"
          >
            <blockquote
              class="rh-audit-finding__sentence"
            >
              Earlier sweeps report the same ordering on held-out traffic.
            </blockquote>
            <p
              class="rh-audit-finding__found"
            >
              <span
                class="rh-audit-finding__kind"
              >
                Citation mismatch
              </span>
               — 
              <span
                class="rh-audit-finding__message"
              >
                the key "smith2024" is cited but missing from refs.bib
              </span>
            </p>
            <div
              class="rh-audit-finding__foot"
            >
              <span
                class="rh-described-term rh-audit-finding__severity"
              >
                <span
                  aria-describedby="rh-described-term-rj"
                  class="rh-described-term__word"
                  tabindex="0"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--status-contested"
                    data-status="contested"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-triangle-alert rh-icon"
                      data-icon="alert-triangle"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                      />
                      <path
                        d="M12 9v4"
                      />
                      <path
                        d="M12 17h.01"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Must fix
                    </span>
                  </span>
                </span>
                <span
                  class="rh-visually-hidden"
                  id="rh-described-term-rj"
                >
                  Accepted state contradicts the manuscript here. It cannot ship as it stands.
                </span>
              </span>
              <span
                class="rh-audit-finding__position"
              >
                manuscript/main.tex, line 44
              </span>
            </div>
          </li>
          <li
            class="rh-audit-finding"
            data-kind="stale_claim"
            data-severity="warning"
            data-source="audit"
          >
            <blockquote
              class="rh-audit-finding__sentence"
            >
              The gain is concentrated in the two rarest attack families.
            </blockquote>
            <p
              class="rh-audit-finding__found"
            >
              <span
                class="rh-audit-finding__kind"
              >
                Stale claim
              </span>
               — 
              <span
                class="rh-audit-finding__message"
              >
                C0041 moved since this paragraph was written
              </span>
            </p>
            <div
              class="rh-audit-finding__foot"
            >
              <span
                class="rh-described-term rh-audit-finding__severity"
              >
                <span
                  aria-describedby="rh-described-term-rk"
                  class="rh-described-term__word"
                  tabindex="0"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--status-candidate"
                    data-status="candidate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-dashed rh-icon"
                      data-icon="circle-dashed"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.1 2.182a10 10 0 0 1 3.8 0"
                      />
                      <path
                        d="M13.9 21.818a10 10 0 0 1-3.8 0"
                      />
                      <path
                        d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
                      />
                      <path
                        d="M2.182 13.9a10 10 0 0 1 0-3.8"
                      />
                      <path
                        d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
                      />
                      <path
                        d="M21.818 10.1a10 10 0 0 1 0 3.8"
                      />
                      <path
                        d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
                      />
                      <path
                        d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Review
                    </span>
                  </span>
                </span>
                <span
                  class="rh-visually-hidden"
                  id="rh-described-term-rk"
                >
                  A researcher has to decide about this before the manuscript ships.
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </section>
  </div>
</div>
`;

exports[`DiagnosticsPanel theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div
    class="rh-diagnostics-panel"
    id="rh-diagnostics-ID"
  >
    <section
      aria-labelledby="rh-diagnostics-ID-compiler"
      class="rh-diagnostics-panel__section"
    >
      <h3
        class="rh-diagnostics-panel__heading"
        id="rh-diagnostics-ID-compiler"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-wrench rh-icon"
          data-icon="wrench"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
          />
        </svg>
        <span>
          Compiler diagnostics
        </span>
        <span
          class="rh-diagnostics-panel__count"
        >
          1 message
        </span>
      </h3>
      <p
        class="rh-diagnostics-panel__note"
      >
        What the LaTeX engine reported about this build.
      </p>
      <div
        class="rh-diagnostic-list"
        data-source="compiler"
      >
        <div
          class="rh-diagnostic-list__group"
        >
          <h4
            class="rh-diagnostic-list__file"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-code rh-icon"
              data-icon="file-code"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
              />
              <path
                d="M14 2v5a1 1 0 0 0 1 1h5"
              />
              <path
                d="M10 12.5 8 15l2 2.5"
              />
              <path
                d="m14 12.5 2 2.5-2 2.5"
              />
            </svg>
            <span>
              manuscript/main.tex
            </span>
            <span
              class="rh-diagnostic-list__count"
            >
              1
            </span>
          </h4>
          <ul
            aria-label="Compiler diagnostics: manuscript/main.tex"
            class="rh-diagnostic-list__rows"
          >
            <li
              class="rh-diagnostic"
              data-severity="error"
              data-source="compiler"
            >
              <p
                class="rh-diagnostic__found"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle-alert rh-icon"
                  data-icon="alert-circle"
                  fill="none"
                  focusable="false"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="8"
                    y2="12"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="16"
                    y2="16"
                  />
                </svg>
                <span
                  class="rh-diagnostic__severity"
                >
                  Error
                </span>
                 — 
                <span
                  class="rh-diagnostic__message"
                >
                  Undefined control sequence.
                </span>
              </p>
              <div
                class="rh-diagnostic__foot"
              >
                <span
                  class="rh-diagnostic__position"
                >
                  line 120
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="rh-diagnostics-ID-audit"
      class="rh-diagnostics-panel__section"
    >
      <h3
        class="rh-diagnostics-panel__heading"
        id="rh-diagnostics-ID-audit"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-microscope rh-icon"
          data-icon="microscope"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18h8"
          />
          <path
            d="M3 22h18"
          />
          <path
            d="M14 22a7 7 0 1 0 0-14h-1"
          />
          <path
            d="M9 14h2"
          />
          <path
            d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"
          />
          <path
            d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"
          />
        </svg>
        <span>
          Scientific audit
        </span>
        <span
          class="rh-diagnostics-panel__count"
        >
          2 findings
        </span>
      </h3>
      <p
        class="rh-diagnostics-panel__note"
      >
        What the manuscript claims, checked against accepted state. Separate from the compiler: a document can compile and still fail this.
      </p>
      <div
        class="rh-audit-finding-list"
        data-source="audit"
      >
        <ul
          aria-label="Scientific audit"
          class="rh-audit-finding-list__rows"
        >
          <li
            class="rh-audit-finding"
            data-kind="citation_mismatch"
            data-severity="error"
            data-source="audit"
          >
            <blockquote
              class="rh-audit-finding__sentence"
            >
              Earlier sweeps report the same ordering on held-out traffic.
            </blockquote>
            <p
              class="rh-audit-finding__found"
            >
              <span
                class="rh-audit-finding__kind"
              >
                Citation mismatch
              </span>
               — 
              <span
                class="rh-audit-finding__message"
              >
                the key "smith2024" is cited but missing from refs.bib
              </span>
            </p>
            <div
              class="rh-audit-finding__foot"
            >
              <span
                class="rh-described-term rh-audit-finding__severity"
              >
                <span
                  aria-describedby="rh-described-term-rm"
                  class="rh-described-term__word"
                  tabindex="0"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--status-contested"
                    data-status="contested"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-triangle-alert rh-icon"
                      data-icon="alert-triangle"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                      />
                      <path
                        d="M12 9v4"
                      />
                      <path
                        d="M12 17h.01"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Must fix
                    </span>
                  </span>
                </span>
                <span
                  class="rh-visually-hidden"
                  id="rh-described-term-rm"
                >
                  Accepted state contradicts the manuscript here. It cannot ship as it stands.
                </span>
              </span>
              <span
                class="rh-audit-finding__position"
              >
                manuscript/main.tex, line 44
              </span>
            </div>
          </li>
          <li
            class="rh-audit-finding"
            data-kind="stale_claim"
            data-severity="warning"
            data-source="audit"
          >
            <blockquote
              class="rh-audit-finding__sentence"
            >
              The gain is concentrated in the two rarest attack families.
            </blockquote>
            <p
              class="rh-audit-finding__found"
            >
              <span
                class="rh-audit-finding__kind"
              >
                Stale claim
              </span>
               — 
              <span
                class="rh-audit-finding__message"
              >
                C0041 moved since this paragraph was written
              </span>
            </p>
            <div
              class="rh-audit-finding__foot"
            >
              <span
                class="rh-described-term rh-audit-finding__severity"
              >
                <span
                  aria-describedby="rh-described-term-rn"
                  class="rh-described-term__word"
                  tabindex="0"
                >
                  <span
                    class="rh-badge rh-badge--sm rh-badge--status-candidate"
                    data-status="candidate"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-circle-dashed rh-icon"
                      data-icon="circle-dashed"
                      fill="none"
                      focusable="false"
                      height="14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.1 2.182a10 10 0 0 1 3.8 0"
                      />
                      <path
                        d="M13.9 21.818a10 10 0 0 1-3.8 0"
                      />
                      <path
                        d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
                      />
                      <path
                        d="M2.182 13.9a10 10 0 0 1 0-3.8"
                      />
                      <path
                        d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
                      />
                      <path
                        d="M21.818 10.1a10 10 0 0 1 0 3.8"
                      />
                      <path
                        d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
                      />
                      <path
                        d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
                      />
                    </svg>
                    <span
                      class="rh-badge__label"
                    >
                      Review
                    </span>
                  </span>
                </span>
                <span
                  class="rh-visually-hidden"
                  id="rh-described-term-rn"
                >
                  A researcher has to decide about this before the manuscript ships.
                </span>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </section>
  </div>
</div>
`;
